--- a/mos-platform/CMakeLists.txt
+++ b/mos-platform/CMakeLists.txt
@@ -46,43 +46,46 @@ else()
 endif()
 
 add_subdirectory(common)
-add_subdirectory(atari2600-common)
-add_subdirectory(atari2600-4k)
-add_subdirectory(atari2600-3e)
-add_subdirectory(atari5200-supercart)
-add_subdirectory(atari8-common)
-add_subdirectory(atari8-dos)
-add_subdirectory(atari8-cart-std)
-add_subdirectory(atari8-cart-xegs)
-add_subdirectory(atari8-cart-megacart)
-add_subdirectory(commodore)
-add_subdirectory(c64)
-add_subdirectory(c128)
-add_subdirectory(cpm65)
-add_subdirectory(cx16)
-add_subdirectory(eater)
-add_subdirectory(geos-cbm)
-add_subdirectory(mega65)
-add_subdirectory(neo6502)
-add_subdirectory(sim)
-add_subdirectory(nes)
-add_subdirectory(nes-action53)
-add_subdirectory(nes-cnrom)
-add_subdirectory(nes-gtrom)
-add_subdirectory(nes-nrom)
-add_subdirectory(nes-mmc1)
-add_subdirectory(nes-mmc3)
-add_subdirectory(nes-unrom)
-add_subdirectory(nes-unrom-512)
-add_subdirectory(osi-c1p)
-add_subdirectory(dodo)
-add_subdirectory(pet)
-add_subdirectory(rpc8e)
-add_subdirectory(lynx)
-add_subdirectory(lynx-bll)
-add_subdirectory(pce-common)
-add_subdirectory(pce)
-add_subdirectory(pce-cd)
-add_subdirectory(rp6502)
-add_subdirectory(supervision)
-add_subdirectory(vic20)
+#add_subdirectory(atari2600-common)
+#add_subdirectory(atari2600-4k)
+#add_subdirectory(atari2600-3e)
+#add_subdirectory(atari5200-supercart)
+#add_subdirectory(atari8-common)
+#add_subdirectory(atari8-dos)
+#add_subdirectory(atari8-cart-std)
+#add_subdirectory(atari8-cart-xegs)
+#add_subdirectory(atari8-cart-megacart)
+#add_subdirectory(commodore)
+#add_subdirectory(c64)
+#add_subdirectory(c128)
+#add_subdirectory(cpm65)
+#add_subdirectory(cx16)
+#add_subdirectory(eater)
+#add_subdirectory(geos-cbm)
+#add_subdirectory(mega65)
+#add_subdirectory(neo6502)
+#add_subdirectory(sim)
+#add_subdirectory(nes)
+#add_subdirectory(nes-action53)
+#add_subdirectory(nes-cnrom)
+#add_subdirectory(nes-gtrom)
+#add_subdirectory(nes-nrom)
+#add_subdirectory(nes-mmc1)
+#add_subdirectory(nes-mmc3)
+#add_subdirectory(nes-unrom)
+#add_subdirectory(nes-unrom-512)
+#add_subdirectory(osi-c1p)
+#add_subdirectory(dodo)
+#add_subdirectory(pet)
+#add_subdirectory(rpc8e)
+#add_subdirectory(lynx)
+#add_subdirectory(lynx-bll)
+#add_subdirectory(pce-common)
+#add_subdirectory(pce)
+#add_subdirectory(pce-cd)
+#add_subdirectory(rp6502)
+#add_subdirectory(supervision)
+#add_subdirectory(vic20)
+
+add_subdirectory(6502fun)
+
